--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "http-proxy-middleware": "^3.0.0",
+    "i18next": "^23.11.5",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.24.0",
     "react-router-hash-link": "^2.4.3",
